--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "dev": "run-p webpack server",
     "webpack": "webpack --watch",
@@ -17,9 +18,13 @@
     "@babel/preset-react": "^7.18.6",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
+    "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
