--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
