--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "react-phone-input-2": "^2.15.1"
   }
 }
