--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "react-phone-input-2": "^2.15.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0"
   }
 }
