--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,6 +11,7 @@
   "plugins": ["react"],
   "ignorePatterns": ["vendor/**/*.css"],
   "rules": {
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react/display-name": "off"
   }
 }
