--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^9.1.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -22,8 +23,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
-    "react-phone-input-2": "^2.15.1"
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "eslint": "^8.42.0"
