add favorites handler

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,6 +12,7 @@
   "ignorePatterns": ["vendor/**/*.css"],
   "rules": {
     "react/prop-types": 0,
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "no-unused-vars": "off"
   }
 }
